<resources>
    <string name="app_name">Jujojaz</string>
    <string name="loginTextV">Login</string>
    <string name="emailText">Email Or Username</string>
    <string name="passText">Password</string>
    <string name="title_activity_home">Home</string>
    <string name="app_label">java</string>
    <string name="search_hint">Telusuri</string>
    <string name="titleStar">Star</string>
    <string name="titleActionbar">actionBar</string>
    <string name="ownCarText">Owner\'s Car</string>
    <string name="emailOwnCar">owner@gmail.com</string>
    <string name="titleSend">Send</string>
    <string name="hintFrom">From</string>
    <string name="hintCarName">Car Name</string>
    <string name="hintDesc">Description</string>
    <string name="nameCar">Lamborghini</string>
    <string name="SignIn">Sign in</string>
    <string name="textDontHave">Don\'t have an account?</string>
    <string name="textSignUp">Sign Up</string>
    <string name="textForgotPass">Forgot Password</string>
    <string name="SignUp">Sign In</string>
    <string name="signUpV">Sign Up</string>
    <string name="textVerification">Verifikasi</string>
    <string name="textCodeVerification">Masukkan Kode Verifikasi</string>
    <string name="textRecvCode">Tidak Menerima Kode?</string>
    <string name="textSendRepeat">Kirim Ulang</string>
    <string name="textEmailVerification">Kode Verifikasi telah dikirim melalui Email ke </string>
    <string name="menuSearch">search</string>
    <string name="menuNotification">notification</string>
    <string name="imagePictText">Picture</string>
    <string name="titleAbout">about</string>
    <string name="textMerk">\tMerk</string>
    <string name="hintTipe">\tTipe</string>
    <string name="hintPajakHari">\tPajak Setiap Berapa Hari</string>
    <string name="hintPajakDimulai">\tPajak Dimulai</string>
    <string name="servis_setiap_berapa_hari">\tServis Setiap Berapa Hari</string>
    <string name="servis_dimulai">\tServis Dimulai</string>
    <string name="menuLogout">logout</string>
</resources>
