<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_auth"
    tools:context=".SignUp">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryTransparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/account"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpV"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emailText"
            android:layout_gravity="left|start"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="5dp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/signUpEmailEText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passText"
            android:layout_gravity="left|start"
            android:background="@android:color/darker_gray"
            android:layout_marginBottom="5dp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/signUpPassEText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</RelativeLayout>