<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EmailConfirmation">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textCodeVerification"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textEmailVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/linearLayEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/emailConfirm_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:layout_weight="1"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/emailConfirm_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:layout_weight="1"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/emailConfirm_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:layout_weight="1"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/emailConfirm_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="1"
            android:layout_weight="1"
            tools:ignore="TextFields" />

    </LinearLayout>

    <Button
        android:id="@+id/btnVerification"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/textVerification"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textRecvCode"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/sendRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSendRepeat"
        android:textAlignment="center"/>

</LinearLayout>